# emos

./: .bochsrc  .gdbinit  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  GEMINI.md  README.md  asdf.txt  asdf2.txt  driver_model.md  flowchart.md  gpt.md  guid.md  mkdisk.sh  object_model.md  run.sh  syscalls.md
boot/: CMakeLists.txt  exported_symbols.txt  unifont-simplified.hex  unifont.hex
boot/acpi/: CMakeLists.txt  alloc.c  event.c  fwreq.c  init.c  isr.c  log.c  map.c  misc.c  mutex.c  rsdp.c  rsdt.c  sdt.c  spinlock.c  time.c
boot/arch/i686/: CMakeLists.txt  breakpoint.S  cpu_mode.S  idt.S  idt.c  idt.h  interrupt.S  io.S  io.h  pause.S
boot/arch/m68k/: CMakeLists.txt
boot/arch/x86_64/: CMakeLists.txt  breakpoint.S  interrupt.S  pause.S
boot/bus/: CMakeLists.txt  bus.c
boot/bus/pci/: CMakeLists.txt  class.c  id.c  scan.c
boot/common/: disk.h  main.c
boot/config/: autoboot.json  boot.cfg  boot.json  bootx.json  cdboot.json  instboot.json
boot/core/: CMakeLists.txt  cleanup.c  font.c  getopt.c  main.c  panic.c  path.c
boot/debug/: CMakeLists.txt  hexdump.c  log.c  panic.c
boot/device/: CMakeLists.txt  device.c  driver.c  resource.c
boot/device/block/: CMakeLists.txt  ata.c  ata.h  atapi.c  atapi.h  fdc_isa.c  floppy.c  ide_isa.c
boot/device/char/: CMakeLists.txt  ansiterm.c  debugout.c  ieee1284_isa.c  uart_isa.c
boot/device/hid/: CMakeLists.txt  bios_keyboard.c  i8042.c  ps2_keyboard.c  ps2_mouse.c
boot/device/rtc/: CMakeLists.txt  rtc_isa.c
boot/device/serial/: CMakeLists.txt  ansi_term.c  porte9.c
boot/device/usb/: CMakeLists.txt  common.h
boot/device/usb_host/: ehci.c
boot/device/video/: CMakeLists.txt  vbe.c  vconsole.c  vga.c
boot/device/virtual/: CMakeLists.txt  ansi_term.c  bios_tty.c
boot/disk/: CMakeLists.txt  disk.c
boot/elf/: CMakeLists.txt  elf.c
boot/encoding/: CMakeLists.txt  cp437.c
boot/filesystem/: CMakeLists.txt  fs.c
boot/filesystem/afs/: afs.c  afs.h
boot/filesystem/fat/: CMakeLists.txt  fat.c  fat.h
boot/filesystem/iso9660/: iso9660.c  iso9660.h
boot/font/: CMakeLists.txt  data.c  font.c
boot/fs/: CMakeLists.txt  driver.c  fat.c  fs.c
boot/fs/afs/: CMakeLists.txt  afs.c  afs.h
boot/fs/fat/: fat.c  fat.h
boot/fs/iso9660/: CMakeLists.txt  iso9660.c
boot/include/: assert.h  async.h  bswap.h  byteswap.h  cleanup.h  compiler.h  ctype.h  debug.h  elf.h  endian.h  fcntl.h  font.h  getopt.h  limits.h  macros.h  math.h  path.h  setjmp.h  shell.h  stdio.h  stdlib.h  string.h  time.h  unistd.h  wchar.h
boot/include/acpi/: fadt.h  madt.h  rsdp.h  rsdt.h  sdt.h  xsdt.h
boot/include/bus/: bus.h
boot/include/core/: panic.h
boot/include/device/: device.h  driver.h  resource.h
boot/include/disk/: disk.h
boot/include/eboot/: cleanup.h  compiler.h  debug.h  device.h  disk.h  elf.h  filesystem.h  font.h  global_configs.h  hid.h  json.h  log.h  macros.h  mm.h  module.h  panic.h  path.h  resource.h  shell.h  status.h  types.h
boot/include/fs/: driver.h  fs.h
boot/include/hid/: hid.h
boot/include/interface/: block.h  char.h  console.h  disk.h  floppy.h  framebuffer.h  hid.h  ide.h  ps2.h
boot/include/mm/: mm.h
boot/include/sys/: io.h  types.h
boot/include/term/: ansi.h
boot/include/virtio/: virtqueue.h
boot/json/: CMakeLists.txt  json.c
boot/lib/: .gitignore  CMakeLists.txt
boot/lib/getopt/: CMakeLists.txt
boot/lib/liballoc/: CMakeLists.txt  internal.h  liballoc.c  platform.c
boot/lib/libatomic/: CMakeLists.txt  libatomic.c
boot/mm/: CMakeLists.txt  mm.c
boot/module/: CMakeLists.txt  module.c  symbol.c  symbol.h
boot/modules/: CMakeLists.txt
boot/modules/bootemos/: CMakeLists.txt  bootinfo.h  main.c  module_info.cfg
boot/modules/example/: CMakeLists.txt  main.c  my_basic.c  shell.c
boot/modules/guishell/: CMakeLists.txt  bitmap.h  color.c  color.h  cursor_data.c  draw.c  draw.h  main.c  module_info.cfg  types.h  window.h
boot/modules/helloworld/: CMakeLists.txt  main.c  module_info.cfg
boot/pci/: CMakeLists.txt  class.c  id.c
boot/shell/: CMakeLists.txt  parse.c  readline.c  shell.c  shell.h  variable.c
boot/shell/commands/: CMakeLists.txt  acpi.c  boot.c  chdir.c  clear.c  cpuid.c  crc32.c  dispimg.c  echo.c  in.c  jump.c  loadmodule.c  lsdev.c  lsfile.c  lsfs.c  lsmod.c  lspci.c  mem.c  mount.c  out.c  poweroff.c  read.c  readblk.c  readfile.c  reboot.c  testmouse.c  testtty.c  time.c  usefont.c  vmode.c  write.c
boot/stdc/: CMakeLists.txt  ctype.c  fclose.c  fopen.c  fprintf.c  fputs.c  fread.c  freopen.c  fseek.c  ftell.c  fwrite.c  memcmp.c  memcpy.c  memset.c  printf.c  putchar.c  puts.c  rand.c  snprintf.c  sprintf.c  stdio.c  strchr.c  strcspn.c  strerror.c  strncasecmp.c  strncat.c  strncmp.c  strncpy.c  strnlen.c  strrchr.c  strtok.c  strtol.c  strtoll.c  strtoul.c  strtoull.c  vfprintf.c  vprintf.c  vsnprintf.c  vsprintf.c
boot/stdc/assert/: CMakeLists.txt  __assert_fail.c
boot/stdc/ctype/: CMakeLists.txt  ctype.c
boot/stdc/errno/: CMakeLists.txt
boot/stdc/stdio/: CMakeLists.txt  __fprintf_chk.c  __printf_chk.c  __snprintf_chk.c  __sprintf_chk.c  fgetc.c  (+25 more)
boot/term/: CMakeLists.txt  ansi.c
boot/video/: CMakeLists.txt
kernel/: CMakeLists.txt  syscalls.md
kernel/arch/: CMakeLists.txt
kernel/bus/: CMakeLists.txt  bus.c
kernel/device/: device.c
kernel/filesystem/: CMakeLists.txt  filesystem.c
kernel/include/: assert.h  byteswap.h  endian.h  errno.h  macros.h  memory.h  setjmp.h  stdio.h  stdlib.h  string.h  strings.h  time.h  wchar.h
kernel/init/: .gitignore  CMakeLists.txt  main.c  pbar.c
kernel/lib/: CMakeLists.txt
kernel/log/: CMakeLists.txt  log.c
kernel/mm/: CMakeLists.txt  mm.c  pma.c  vma.c
kernel/mutex/: CMakeLists.txt  mutex.c  spinlock.c
kernel/stdc/: CMakeLists.txt
kernel/thread/: CMakeLists.txt  scheduler.c  thread.c
tools/afsimg/: CMakeLists.txt  afs.cpp  afs.h  afs.hpp  command.h  copy.c  crc32.h  delete.c  getattr.c  image.cpp  image.hpp  lsfile.c  main.c  main.cpp  mkdir.c  move.c  rename.c  setattr.c  types.h  volinfo.c
tools/mkfs.afs/: CMakeLists.txt  afs.h  crc32.c  main.c  specification.md
(+422 files in other folders)
